--- a/cord19q_extra/investigate.ipynb
+++ b/cord19q_extra/investigate.ipynb
@@ -4,31 +4,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pierre-Alexandre\n",
+    "**History**\n",
     "\n",
-    "30.03.2020"
+    "* 30.03.2020 Pierre-Alexandre\n",
+    "  1. [x] initialize notebook and environment\n",
+    "  2. [x] create widget to enter sentence to investigate and display the report\n",
+    "* 31.03.2020 Émilie Francesco Pierre-Alexandre\n",
+    "  1. [x] identify where embeddings are computed (query and sentences)\n",
+    "* 01.04.2020 Pierre-Alexandre Émilie Francesco\n",
+    "  1. [x] create cord19q_extra to modify query and sentences processing\n",
+    "  2. [-] use Universal Sentence Encoding instead to compute true sentence embeddings\n",
+    "  3. [ ] relaunch indexing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Demo on 30.03.2020**\n",
+    "\n",
+    "Main limitation\n",
+    " - Do specific diets correlate with patient susceptibility / outcomes?\n",
+    " - diets patient susceptibility\n",
+    "\n",
+    "Next step\n",
+    " - Overcoming this main limitation.\n",
+    " - i.e. using a sentence embeddings model instead of a word one\n",
+    "\n",
+    "Examples:\n",
+    "  * from Emmanuelle:\n",
+    "    - ketogenic diet is protective against covid-19\n",
+    "  * from Stan:\n",
+    "    - honey is the cure for everything"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import partial\n",
-    "from cord19q.query import Query\n",
     "\n",
-    "q = partial(Query.run, path='cord19q')"
+    "from ipywidgets import Textarea, Button, Output, VBox, Layout\n",
+    "\n",
+    "from cord19q_extra.query import CustomQuery"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import Textarea, Button, Output, VBox, Layout\n",
-    "\n",
+    "q = partial(CustomQuery.run, method='fasttext_bm25', path='../../cord19q')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def investigate():\n",
     "    \n",
     "    def on_clicked(b):\n",
@@ -51,97 +95,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Main limitation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "# Do specific diets correlate with patient susceptibility / outcomes?\n",
-    "# diets patient susceptibility"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Next step"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "=> overcoming this main limitation (i.e. using a sentence embeddings model instead of a word one)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Demo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From Emmanuelle:\n",
-    "  * ketogenic diet is protective against covid-19\n",
-    "\n",
-    "From Stan:\n",
-    "  * honey is the cure for everything"
+    "investigate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba74959b71a64e71b07336431410fa80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Textarea(value='Inhibition of N-glycosylation (using N-glycosylation inhibitors or Lectins) is …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "investigate()"
-   ]
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -160,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
