cord19q_extra > sentence embeddings > widget improvments

--- a/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:absl:Using /tmp/tfhub_modules to cache modules.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 22.2 s, sys: 4.49 s, total: 26.7 s\n",
-      "Wall time: 21.6 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
@@ -105,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,24 +141,33 @@
     "    \n",
     "    def on_clicked(b):\n",
     "        wout.clear_output()\n",
-    "        with wout:            \n",
+    "        with wout:\n",
+    "            print()\n",
     "            t0 = time.time()\n",
-    "            print(Color.RED + wtext.value + Color.END + '\\n')\n",
+    "            \n",
+    "            print('Embedding sentence...', end=' ')\n",
     "            embedding_query = embed_sentences([wtext.value], wselect_model.value, eval(wselect_model.value.lower()))\n",
+    "            print(f'{time.time()-t0:.2f} s.')\n",
+    "            \n",
+    "            print('Computing similarities...', end=' ')\n",
     "            arr = embeddings[wselect_model.value]\n",
     "            uids, embedding_docs = arr[:, 0], arr[:, 1:]\n",
     "            similarities = cosine_similarity(X=embedding_query, Y=embedding_docs).squeeze()\n",
+    "            print(f'{time.time()-t0:.2f} s.')\n",
+    "            \n",
+    "            print('Ranking documents...', end=' ')\n",
     "            indices = np.argsort(-similarities)[:wselect_count.value]\n",
+    "            print(f'{time.time()-t0:.2f} s.')\n",
+    "            \n",
+    "            print()\n",
     "            for uid_, sim_ in zip(uids[indices], similarities[indices]):\n",
     "                article_sha, text = db.execute('SELECT Article, Text FROM sections WHERE Id = ?', [uid_]).fetchall()[0]\n",
     "                print(f'Section id: {int(uid_):>7,d} --- Similarity: {sim_:.2f}')\n",
     "                print(Color.BLUE + text + Color.END)\n",
     "                article_title = db.execute('SELECT Title FROM articles WHERE Id = ?', [article_sha]).fetchone()[0]\n",
     "                print(Color.GREEN + 'From: ' + article_title + Color.END)\n",
-    "                print('\\n')\n",
-    "            t1 = time.time()\n",
-    "            print(f'[Done in {t1-t0:.2f} s.]')\n",
-    "\n",
+    "                print()\n",
+    "    \n",
     "    wselect_model = widgets.ToggleButtons(\n",
     "        options=[ 'USE', 'SBERT', 'BSV'],\n",
     "        description='Model:',\n",
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,24 +197,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e4f0b6e90be4d78bffeb7890c094065",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(ToggleButtons(description='Model:', options=('USE', 'SBERT', 'BSV'), tooltips=('Universal Sente…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "investigate()"
    ]
@@ -253,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings.close()"
+    "# embeddings.close()"
    ]
   }
  ],
