cord19q_extra > sentence embeddings > BioSentVec model added

--- a/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO Use 'bert-large-nli-mean-tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import time\n",
     "import sqlite3\n",
     "\n",
@@ -14,8 +23,13 @@
     "import tensorflow_hub as hub\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sentence_transformers import SentenceTransformer"
+    "import sent2vec\n",
+    "from nltk import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from string import punctuation\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -45,36 +59,65 @@
    "source": [
     "%%time\n",
     "\n",
-    "# Load universal sentence encoder\n",
+    "# Load USE\n",
     "use_version = 5\n",
-    "use = hub.load(f\"https://tfhub.dev/google/universal-sentence-encoder-large/{use_version}\")\n",
+    "use = hub.load(f\"https://tfhub.dev/google/universal-sentence-encoder-large/{use_version}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "\n",
     "# Load SBERT\n",
-    "sbert = SentenceTransformer('bert-base-nli-mean-tokens')\n",
+    "sbert = SentenceTransformer('bert-base-nli-mean-tokens')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "\n",
-    "def embed_sentences(sentences,\n",
-    "                    embedding_name,\n",
-    "                    embedding_model):\n",
-    "    '''Sentence embedding.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    sentences : List[str]\n",
-    "        List of N strings.\n",
-    "    embedding_name : str\n",
-    "        Name of the embedding type. One of ('USE', 'SBERT').\n",
-    "    embedding_model : tf.Model or torch.Module\n",
-    "        Neural net model to create sentence embeddings.\n",
-    "        \n",
-    "    Return\n",
-    "    ------\n",
-    "    encodded_sentences : np.ndarray\n",
-    "        Numpy array of shape (N, n_dims).\n",
-    "    '''\n",
+    "# Load BioSentVec\n",
+    "bsv = sent2vec.Sent2vecModel()\n",
+    "bsv.load_model('BioSentVec_PubMed_MIMICIII-bigram_d700.bin')\n",
+    "\n",
+    "bsv_stopwords = set(stopwords.words('english'))\n",
+    "\n",
+    "def bsv_preprocess(text):\n",
+    "    text = text.replace('/', ' / ')\n",
+    "    text = text.replace('.-', ' .- ')\n",
+    "    text = text.replace('.', ' . ')\n",
+    "    text = text.replace('\\'', ' \\' ')\n",
+    "    text = text.lower()\n",
+    "    tokens = [token for token in word_tokenize(text)\n",
+    "              if token not in punctuation and token not in bsv_stopwords]\n",
+    "    return ' '.join(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def embed_sentences(sentences, embedding_name, embedding_model):\n",
     "    if embedding_name == 'USE':\n",
     "        return embedding_model(sentences).numpy()\n",
+    "    \n",
     "    elif embedding_name == 'SBERT':\n",
     "        return np.stack(embedding_model.encode(sentences), axis=0)\n",
+    "    \n",
+    "    elif embedding_name == 'BSV':\n",
+    "        preprocessed = [bsv_preprocess(x) for x in sentences]\n",
+    "        return embedding_model.embed_sentences(preprocessed)\n",
+    "        \n",
     "    else:\n",
     "        raise NotImplementedError(f'Embedding {repr(embedding_name)} not '\n",
     "                                  f'available!')"
@@ -93,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMBEDDINGS_NAMES = ['USE', 'SBERT']"
+    "EMBEDDINGS_NAMES = ['USE', 'SBERT', 'BSV']"
    ]
   },
   {
@@ -127,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEFAULT_QUERY = (\"Inhibition of N-glycosylation (using N-glycosylation inhibitors or Lectins)\"\n",
+    "DEFAULT_QUERY = (\"Inhibition of N-glycosylation (using N-glycosylation inhibitors or Lectins) \"\n",
     "                 \"is a potential therapeutic approach for COVID-19 therapy.\")"
    ]
   },
@@ -145,24 +188,25 @@
     "            print()\n",
     "            t0 = time.time()\n",
     "            \n",
-    "            print('Embedding sentence...', end=' ')\n",
+    "            print('Embedding sentence...    ', end=' ')\n",
     "            embedding_query = embed_sentences([wtext.value], wselect_model.value, eval(wselect_model.value.lower()))\n",
     "            print(f'{time.time()-t0:.2f} s.')\n",
     "            \n",
     "            print('Computing similarities...', end=' ')\n",
+    "            # For scalability, we will replace this part with FAISS, as in the other part of the code base.\n",
     "            arr = embeddings[wselect_model.value]\n",
     "            uids, embedding_docs = arr[:, 0], arr[:, 1:]\n",
     "            similarities = cosine_similarity(X=embedding_query, Y=embedding_docs).squeeze()\n",
     "            print(f'{time.time()-t0:.2f} s.')\n",
     "            \n",
-    "            print('Ranking documents...', end=' ')\n",
+    "            print('Ranking documents...     ', end=' ')\n",
     "            indices = np.argsort(-similarities)[:wselect_count.value]\n",
     "            print(f'{time.time()-t0:.2f} s.')\n",
     "            \n",
     "            print()\n",
-    "            for uid_, sim_ in zip(uids[indices], similarities[indices]):\n",
+    "            for i, (uid_, sim_) in enumerate(zip(uids[indices], similarities[indices])):\n",
     "                article_sha, text = db.execute('SELECT Article, Text FROM sections WHERE Id = ?', [uid_]).fetchall()[0]\n",
-    "                print(f'Section id: {int(uid_):>7,d} --- Similarity: {sim_:.2f}')\n",
+    "                print(f'Rank: {i} --- Section id: {int(uid_):>7,d} --- Similarity: {sim_:.2f}')\n",
     "                print(Color.BLUE + text + Color.END)\n",
     "                article_title = db.execute('SELECT Title FROM articles WHERE Id = ?', [article_sha]).fetchone()[0]\n",
     "                print(Color.GREEN + 'From: ' + article_title + Color.END)\n",
@@ -171,7 +215,7 @@
     "    wselect_model = widgets.ToggleButtons(\n",
     "        options=[ 'USE', 'SBERT', 'BSV'],\n",
     "        description='Model:',\n",
-    "        tooltips=['Universal Sentence Encoder', 'Sentence BERT', 'Coming Soon'],\n",
+    "        tooltips=['Universal Sentence Encoder', 'Sentence BERT', 'BioSentVec'],\n",
     "    )\n",
     "    \n",
     "    wselect_count = widgets.IntSlider(value=10, min=0, max=100, description='Top N:',)\n",
@@ -192,7 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Glucose consumption could also be a risk-factor for COVID-19 severity."
+    "# Glucose consumption could also be a risk-factor for COVID-19 severity.\n",
+    "# Glucose or sugar is a risk factor for COVID-19."
    ]
   },
   {
