cord19q_extra > sentence embeddings > context & TODO added

--- a/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -1,12 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# TODO Use 'bert-large-nli-mean-tokens"
+    "### TODO\n",
+    "\n",
+    "03.04.2020\n",
+    "- Use 'bert-large-nli-mean-tokens'.\n",
+    "\n",
+    "06.04.2020\n",
+    "- Add the lower ranking of some keywords (like 'diabetes').\n",
+    "- Explore how synonyms impact sentence embeddings space search."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Context\n",
+    "\n",
+    "**Dataset**\n",
+    "\n",
+    "Human curated WHO papers + query* on PMC / bioRxiv / medRxiv.\n",
+    "\n",
+    "**Query**\n",
+    "\n",
+    "- \"COVID-19\"\n",
+    "- OR Coronavirus\n",
+    "- OR \"Corona virus\"\n",
+    "- OR \"2019-nCoV\"\n",
+    "- OR \"SARS-CoV\"\n",
+    "- OR \"MERS-CoV\"\n",
+    "- OR “Severe Acute Respiratory Syndrome”\n",
+    "- OR “Middle East Respiratory Syndrome” "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -154,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect('cord19q/articles.sqlite')"
+    "db = sqlite3.connect('../cord19q/articles.sqlite')"
    ]
   },
   {
@@ -163,16 +204,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DEFAULT_QUERY = (\"Inhibition of N-glycosylation (using N-glycosylation inhibitors or Lectins) \"\n",
-    "                 \"is a potential therapeutic approach for COVID-19 therapy.\")"
-   ]
   },
   {
    "cell_type": "code",
@@ -220,7 +251,7 @@
     "    \n",
     "    wselect_count = widgets.IntSlider(value=10, min=0, max=100, description='Top N:',)\n",
     "    \n",
-    "    wtext = widgets.Textarea(value=DEFAULT_QUERY, layout=widgets.Layout(width='90%', height='80px'))\n",
+    "    wtext = widgets.Textarea(layout=widgets.Layout(width='90%', height='80px'))\n",
     "\n",
     "    button = widgets.Button(description='Investigate!')\n",
     "    button.on_click(on_clicked)\n",
@@ -231,13 +262,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Glucose consumption could also be a risk-factor for COVID-19 severity.\n",
-    "# Glucose or sugar is a risk factor for COVID-19."
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Investigations\n",
+    "\n",
+    "- Inhibition of N-glycosylation (using N-glycosylation inhibitors or Lectins) is a potential therapeutic approach for COVID-19 therapy.\n",
+    "- Is high blood / plasma sugar level or hyperglycemia associated with higher susceptibility to coronavirus infection or higher virus replication?\n",
+    "- Glucose or sugar is a risk factor for COVID-19.\n",
+    "- Ketogenic diet is protective against COVID-19."
    ]
   },
   {
@@ -269,6 +309,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# db.close()"
+   ]
   },
   {
    "cell_type": "code",
