Fix bug when using generate report button

--- a/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -105,13 +105,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://p1.hiclipart.com/preview/389/225/95/party-emoji-face-qualatex-smiley-party-guy-38-foil-balloon-emoticon-birthday-party-hat-burtonburton-northwest-greetingsballoon-world-gift-png-clipart.jpg\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Definitions"
    ]
   },
@@ -134,11 +127,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = Path(\"../data/2020-04-08\")\n",
+    "data_path = Path(\"/raid/sschmidt/covid/data/2020-04-08\")\n",
     "cord_path = data_path / \"CORD-19-research-challenge\"\n",
     "databases_path = data_path / \"databases\"\n",
     "embeddings_path = data_path / \"embeddings\"\n",
-    "assets_path = Path(\"../assets\")\n",
+    "assets_path = Path(\"/raid/sschmidt/covid/assets\")\n",
     "\n",
     "assert data_path.exists()\n",
     "assert cord_path.exists()\n",
@@ -539,11 +532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_paragraph(uid, sentence):\n",
+    "def find_paragraph(uid, sentence, db):\n",
     "    \"\"\"Find the paragraph corresponding to the given sentece\n",
     "    \n",
     "    Parameters\n",
@@ -559,8 +552,6 @@
     "    -------\n",
     "    formatted_paragraph : str\n",
     "        The paragraph containing `sentence`\n",
-    "    where_from: str\n",
-    "        The section name of the paragraph\n",
     "    \"\"\"\n",
     "    \n",
     "    sha, where_from = db.execute(f'SELECT Article, Name FROM sections WHERE Id = {uid}').fetchall()[0]\n",
@@ -590,7 +581,7 @@
     "    else:\n",
     "        raise ValueError(\"SHA not found\")\n",
     "        \n",
-    "    return paragraph, where_from"
+    "    return paragraph"
    ]
   },
   {
@@ -627,7 +618,7 @@
     "    end = start + len(sentence)\n",
     "    hightlighted_paragraph = ''.join([\n",
     "        paragraph[:start],\n",
-    "        color + paragraph[start:end] + Color.END,\n",
+    "        '<font color=\"purple\"> <b>' + paragraph[start:end] + '</b> </font>',\n",
     "        paragraph[end:]\n",
     "    ])\n",
     "    wrapped_lines = textwrap.wrap(hightlighted_paragraph, width=width)\n",
@@ -646,17 +637,15 @@
     "uid = 81135\n",
     "sentence = \"This agent binds towards the pocket entrance, but fails to occupy the end of the pocket (Chapman et al., 1991) .\"\n",
     "\n",
-    "paragraph, section_name = find_paragraph(uid, sentence, db)\n",
-    "print(section_name)\n",
+    "paragraph = find_paragraph(uid, sentence, db)\n",
+    "print(paragraph)\n",
     "# print(highlight_in_paragraph(paragraph, sentence, width=80, indent=10))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "html_report = \"\"\n",
@@ -761,18 +750,18 @@
     "            print(Color.RED + f'\\nInvestigating: {query_value[0]}\\n' + Color.END)\n",
     "            \n",
     "            for i, (uid_, sim_) in enumerate(zip(uids[indices_without_excluded], similarities[indices_without_excluded])):\n",
-    "                article_sha, text = db.execute('SELECT Article, Text FROM sections WHERE Id = ?', [uid_]).fetchall()[0]\n",
+    "                article_sha, section_name, text = db.execute('SELECT Article, Name, Text FROM sections WHERE Id = ?', [uid_]).fetchall()[0]\n",
     "                article_auth, article_title, date, ref = db.execute('SELECT Authors, Title, Published, Reference FROM articles WHERE Id = ?', [article_sha]).fetchall()[0]\n",
     "                article_auth = article_auth.split(';')[0] + ' et al.'\n",
     "                date = date.split()[0]\n",
     "                ref = ref if ref else ''\n",
-    "                 \n",
+    "                section_name = section_name if section_name else ''\n",
+    "                \n",
     "                width = 80\n",
     "                if w_check_whole_paragraph.value:\n",
     "                    logger.debug(f\"UID={uid_}\")\n",
     "                    try:\n",
-    "                        paragraph, section_name = find_paragraph(uid_, text, db)\n",
-    "                        section_name = section_name or \"\"\n",
+    "                        paragraph = find_paragraph(uid_, text, db)\n",
     "                        formatted_output = highlight_in_paragraph(paragraph, text, width=width, indent=2)\n",
     "                    except:\n",
     "                        formatted_output = \"<there was a problem retrieving the paragraph, the original sentence is:>\\n\"\n",
@@ -781,12 +770,14 @@
     "                    formatted_output = textwrap.fill(text, width=width)\n",
     "                \n",
     "                \n",
+    "                formatted_output = f'<em> {formatted_output} </em>'\n",
+    "                \n",
     "                article_metadata = f\"\"\"<a href=\"{ref}\">&nbsp;[{i+1:2d}] <br> Source: {article_title} </a>\n",
     "                                   <br> Author: {article_auth}\n",
     "                                   <br> Section: {section_name.lower().title()}\"\"\"\n",
     "                \n",
     "                display(HTML(article_metadata))\n",
-    "                print(formatted_output)\n",
+    "                display(HTML(formatted_output))\n",
     "                print()\n",
     "                \n",
     "                html_report += article_metadata + f\" <br> <p> {formatted_output} </p> <br>\"\n",
@@ -799,8 +790,8 @@
     "    \n",
     "    wselect_count = widgets.IntSlider(value=10, min=0, max=100, description='Top N:',)\n",
     "    \n",
-    "    wcheck = widgets.Checkbox(value=True, description='merge synonyms')\n",
-    "    w_check_whole_paragraph = widgets.Checkbox(value=True, description='show whole paragraph')\n",
+    "    wcheck = widgets.Checkbox(value=False, description='merge synonyms')\n",
+    "    w_check_whole_paragraph = widgets.Checkbox(value=False, description='show whole paragraph')\n",
     "    \n",
     "    wtext_query = widgets.Textarea(layout=widgets.Layout(width='90%', height='80px'), \n",
     "                                   value='Glucose is a risk factor for COVID-19.',\n",
@@ -825,7 +816,7 @@
     "                                       style={'description_width': 'initial'})\n",
     "    investigate_button = widgets.Button(description='Investigate!')\n",
     "    investigate_button.on_click(investigate_on_click)\n",
-    "    pdf_download_button = widgets.Button(description='Download PDF Report', layout=widgets.Layout(width='25%'))\n",
+    "    pdf_download_button = widgets.Button(description='Generate PDF Report', layout=widgets.Layout(width='25%'))\n",
     "    \n",
     "    pdf_download_button.on_click(pdf_button_on_click)\n",
     "    \n",
