--- a/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -558,7 +558,7 @@
     "    hightlighted_paragraph = f'''\n",
     "        <p style=\"font-size:13px; color:{COLOR_TEXT}\">\n",
     "        {paragraph[:start]}\n",
-    "        <font color={COLOR_HIGHLIGHT}\"> <b> {paragraph[start:end]} </b> </font>\n",
+    "        <b style=\"color:{COLOR_HIGHLIGHT}\"> {paragraph[start:end]} </b>\n",
     "        {paragraph[end:]}\n",
     "        </p>\n",
     "        '''\n",
@@ -665,147 +665,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "html_report = [None]  # list-trick: acts as global variable string!\n",
-    "\n",
-    "\n",
-    "def investigate_on_click(b):\n",
-    "    my_widgets['out'].clear_output()\n",
-    "    with my_widgets['out']:\n",
-    "        html_report[0] = ''\n",
-    "        print()\n",
-    "        t0 = time.time()\n",
+    "class HtmlReport:\n",
+    "    def __init__(self):\n",
+    "        self.report = None\n",
     "        \n",
-    "        sentence_embedder_name = my_widgets['sent_embedder'].value\n",
-    "        merge_synonyms = my_widgets['merge_synonyms'].value\n",
-    "        top_n_results = my_widgets['top_results'].value\n",
-    "        print_whole_paragraph = my_widgets['print_paragraph'].value\n",
-    "        query_text = my_widgets['query_text'].value\n",
-    "        deprioritize_text = my_widgets['deprioritize_text'].value\n",
-    "        deprioritize_strength = my_widgets['deprioritize_strength'].value\n",
-    "        exclusion_text = my_widgets['exclusion_text'].value\n",
-    "        \n",
-    "        \n",
-    "        if merge_synonyms:\n",
-    "            query_text = sent_preprocessing([query_text], synonyms_index)\n",
-    "            deprioritize_text = sent_preprocessing([deprioritize_text], synonyms_index)                \n",
-    "        else:\n",
-    "            query_text = [query_text]\n",
-    "            deprioritize_text = [deprioritize_text]\n",
+    "    def investigate_on_click(self, b):\n",
+    "        my_widgets['out'].clear_output()\n",
+    "        with my_widgets['out']:\n",
+    "            self.report = ''\n",
+    "            print()\n",
+    "            t0 = time.time()\n",
     "\n",
-    "        print('Embedding query...    ', end=' ')\n",
-    "        embedding_query = embed_sentences(query_text, \n",
-    "                                          sentence_embedder_name, \n",
-    "                                          eval(sentence_embedder_name.lower()))\n",
-    "        print(f'{time.time()-t0:.2f} s.')\n",
+    "            sentence_embedder_name = my_widgets['sent_embedder'].value\n",
+    "            merge_synonyms = my_widgets['merge_synonyms'].value\n",
+    "            top_n_results = my_widgets['top_results'].value\n",
+    "            print_whole_paragraph = my_widgets['print_paragraph'].value\n",
+    "            query_text = my_widgets['query_text'].value\n",
+    "            deprioritize_text = my_widgets['deprioritize_text'].value\n",
+    "            deprioritize_strength = my_widgets['deprioritize_strength'].value\n",
+    "            exclusion_text = my_widgets['exclusion_text'].value\n",
     "\n",
-    "        if deprioritize_text[0]:\n",
-    "            print('Embedding deprioritization...    ', end=' ')\n",
-    "            embedding_exclu = embed_sentences(deprioritize_text, \n",
+    "\n",
+    "            if merge_synonyms:\n",
+    "                query_text = sent_preprocessing([query_text], synonyms_index)\n",
+    "                deprioritize_text = sent_preprocessing([deprioritize_text], synonyms_index)                \n",
+    "            else:\n",
+    "                query_text = [query_text]\n",
+    "                deprioritize_text = [deprioritize_text]\n",
+    "\n",
+    "            print('Embedding query...    ', end=' ')\n",
+    "            embedding_query = embed_sentences(query_text, \n",
     "                                              sentence_embedder_name, \n",
     "                                              eval(sentence_embedder_name.lower()))\n",
-    "            print(f'{time.time()-t0:.2f} s.')                \n",
+    "            print(f'{time.time()-t0:.2f} s.')\n",
     "\n",
-    "        print('Computing similarities...', end=' ')\n",
+    "            if deprioritize_text[0]:\n",
+    "                print('Embedding deprioritization...    ', end=' ')\n",
+    "                embedding_exclu = embed_sentences(deprioritize_text, \n",
+    "                                                  sentence_embedder_name, \n",
+    "                                                  eval(sentence_embedder_name.lower()))\n",
+    "                print(f'{time.time()-t0:.2f} s.')                \n",
     "\n",
-    "        if merge_synonyms:\n",
-    "            arr = embeddings_syns[sentence_embedder_name]\n",
-    "        else:\n",
-    "            arr = embeddings[sentence_embedder_name]\n",
-    "        sentence_ids, embeddings_corpus = arr[:, 0], arr[:, 1:]\n",
-    "        similarities_query = cosine_similarity(X=embedding_query, Y=embeddings_corpus).squeeze()\n",
+    "            print('Computing similarities...', end=' ')\n",
     "\n",
-    "        if deprioritize_text[0]:\n",
-    "            similarities_exclu = cosine_similarity(X=embedding_exclu, Y=embeddings_corpus).squeeze()\n",
-    "        else:\n",
-    "            similarities_exclu = np.zeros_like(similarities_query)\n",
-    "\n",
-    "        deprioritizations ={\n",
-    "            'None': (1, 0),\n",
-    "            'Weak': (0.9, 0.1),\n",
-    "            'Mild': (0.8, 0.3),\n",
-    "            'Strong': (0.5, 0.5),\n",
-    "            'Stronger': (0.5, 0.7), \n",
-    "        }\n",
-    "        # now: maximize L = a1 * cos(x, query) - a2 * cos(x, exclusions)\n",
-    "        alpha_1, alpha_2 = deprioritizations[deprioritize_strength]\n",
-    "        similarities = alpha_1 * similarities_query - alpha_2 * similarities_exclu\n",
-    "\n",
-    "        print(f'{time.time()-t0:.2f} s.')\n",
-    "\n",
-    "        print('Ranking documents...     ', end=' ')\n",
-    "\n",
-    "        # SUBSTRING EXCLUSIONS\n",
-    "        excluded_words = [x for x in exclusion_text.lower().split('\\n') if x] # remove empty strings\n",
-    "\n",
-    "        indices = np.argsort(-similarities)\n",
-    "        indices_without_excluded = []\n",
-    "\n",
-    "        ix = 0\n",
-    "        while len(indices_without_excluded) < top_n_results:\n",
-    "            sentence_text = db.execute('SELECT Text FROM sections WHERE Id = ?', \n",
-    "                                       [sentence_ids[indices[ix]]]).fetchall()[0][0].lower()\n",
-    "            is_contained = any([w in sentence_text for w in excluded_words])\n",
-    "\n",
-    "            if not is_contained:\n",
-    "                indices_without_excluded.append(indices[ix])\n",
-    "\n",
-    "            ix += 1\n",
-    "\n",
-    "\n",
-    "        print(f'{time.time()-t0:.2f} s. Excluded {ix - top_n_results} items based on substrings.')\n",
-    "\n",
-    "        print(f'\\nInvestigating: {query_text[0]}\\n')\n",
-    "\n",
-    "        for i, (sentence_id_, sim_) in enumerate(zip(sentence_ids[indices_without_excluded], \n",
-    "                                                     similarities[indices_without_excluded])):\n",
-    "            article_sha, section_name, text = \\\n",
-    "            db.execute('SELECT Article, Name, Text FROM sections WHERE Id = ?', \n",
-    "                       [sentence_id_]).fetchall()[0]\n",
-    "            article_auth, article_title, date, ref = \\\n",
-    "                db.execute('SELECT Authors, Title, Published, Reference FROM articles WHERE Id = ?', \n",
-    "                           [article_sha]).fetchall()[0]\n",
-    "            article_auth = article_auth.split(';')[0] + ' et al.'\n",
-    "            date = date.split()[0]\n",
-    "            ref = ref if ref else ''\n",
-    "            section_name = section_name if section_name else ''\n",
-    "\n",
-    "            width = 80\n",
-    "            if print_whole_paragraph:\n",
-    "                logger.debug(f\"UID={sentence_id_}\")\n",
-    "                try:\n",
-    "                    paragraph = find_paragraph(sentence_id_, text, db)\n",
-    "                    formatted_output = highlight_in_paragraph(paragraph, text, width=width, indent=2)\n",
-    "                except:\n",
-    "                    formatted_output = \"<there was a problem retrieving the paragraph, the original sentence is:>\\n\"\n",
-    "                    formatted_output += text\n",
+    "            if merge_synonyms:\n",
+    "                arr = embeddings_syns[sentence_embedder_name]\n",
     "            else:\n",
-    "                formatted_output = textwrap.fill(text, width=width)\n",
+    "                arr = embeddings[sentence_embedder_name]\n",
+    "            sentence_ids, embeddings_corpus = arr[:, 0], arr[:, 1:]\n",
+    "            similarities_query = cosine_similarity(X=embedding_query, Y=embeddings_corpus).squeeze()\n",
+    "\n",
+    "            if deprioritize_text[0]:\n",
+    "                similarities_exclu = cosine_similarity(X=embedding_exclu, Y=embeddings_corpus).squeeze()\n",
+    "            else:\n",
+    "                similarities_exclu = np.zeros_like(similarities_query)\n",
+    "\n",
+    "            deprioritizations ={\n",
+    "                'None': (1, 0),\n",
+    "                'Weak': (0.9, 0.1),\n",
+    "                'Mild': (0.8, 0.3),\n",
+    "                'Strong': (0.5, 0.5),\n",
+    "                'Stronger': (0.5, 0.7), \n",
+    "            }\n",
+    "            # now: maximize L = a1 * cos(x, query) - a2 * cos(x, exclusions)\n",
+    "            alpha_1, alpha_2 = deprioritizations[deprioritize_strength]\n",
+    "            similarities = alpha_1 * similarities_query - alpha_2 * similarities_exclu\n",
+    "\n",
+    "            print(f'{time.time()-t0:.2f} s.')\n",
+    "\n",
+    "            print('Ranking documents...     ', end=' ')\n",
+    "\n",
+    "            # SUBSTRING EXCLUSIONS\n",
+    "            excluded_words = [x for x in exclusion_text.lower().split('\\n') if x] # remove empty strings\n",
+    "\n",
+    "            indices = np.argsort(-similarities)\n",
+    "            indices_without_excluded = []\n",
+    "\n",
+    "            ix = 0\n",
+    "            while len(indices_without_excluded) < top_n_results:\n",
+    "                sentence_text = db.execute('SELECT Text FROM sections WHERE Id = ?', \n",
+    "                                           [sentence_ids[indices[ix]]]).fetchall()[0][0].lower()\n",
+    "                is_contained = any([w in sentence_text for w in excluded_words])\n",
+    "\n",
+    "                if not is_contained:\n",
+    "                    indices_without_excluded.append(indices[ix])\n",
+    "\n",
+    "                ix += 1\n",
     "\n",
     "\n",
+    "            print(f'{time.time()-t0:.2f} s. Excluded {ix - top_n_results} items based on substrings.')\n",
     "\n",
-    "#             article_metadata = f\"\"\"<a href=\"{ref}\">&nbsp;[{i+1:2d}] <br> Source: {article_title} </a>\n",
-    "#                                    <br> Author: {article_auth}\n",
-    "#                                    <br> Section: {section_name.lower().title()}\"\"\"\n",
-    "            COLOR_TITLE = '#1A0DAB'\n",
-    "            COLOR_METADATA = '#006621'\n",
-    "            article_metadata = f\"\"\"\n",
-    "            <a href=\"{ref}\" style=\"color:{COLOR_TITLE}; font-size:17px\"> \n",
-    "                {article_title}\n",
-    "            </a>\n",
-    "            <br>\n",
-    "            <p style=\"color:{COLOR_METADATA}; font-size:13px\"> \n",
-    "                {article_auth} &#183; {section_name.lower().title()}\n",
-    "            </p>\n",
-    "            \"\"\"\n",
+    "            print(f'\\nInvestigating: {query_text[0]}\\n')\n",
     "\n",
-    "            display(HTML(article_metadata))\n",
-    "            display(HTML(formatted_output))\n",
-    "            print()\n",
+    "            for i, (sentence_id_, sim_) in enumerate(zip(sentence_ids[indices_without_excluded], \n",
+    "                                                         similarities[indices_without_excluded])):\n",
+    "                article_sha, section_name, text = \\\n",
+    "                db.execute('SELECT Article, Name, Text FROM sections WHERE Id = ?', \n",
+    "                           [sentence_id_]).fetchall()[0]\n",
+    "                article_auth, article_title, date, ref = \\\n",
+    "                    db.execute('SELECT Authors, Title, Published, Reference FROM articles WHERE Id = ?', \n",
+    "                               [article_sha]).fetchall()[0]\n",
+    "                article_auth = article_auth.split(';')[0] + ' et al.'\n",
+    "                date = date.split()[0]\n",
+    "                ref = ref if ref else ''\n",
+    "                section_name = section_name if section_name else ''\n",
     "\n",
-    "            html_report[0] += article_metadata +  formatted_output + \"<br>\"\n",
+    "                width = 80\n",
+    "                if print_whole_paragraph:\n",
+    "                    logger.debug(f\"UID={sentence_id_}\")\n",
+    "                    try:\n",
+    "                        paragraph = find_paragraph(sentence_id_, text, db)\n",
+    "                        formatted_output = highlight_in_paragraph(paragraph, text, width=width, indent=2)\n",
+    "                    except:\n",
+    "                        formatted_output = \"<there was a problem retrieving the paragraph, the original sentence is:>\\n\"\n",
+    "                        formatted_output += text\n",
+    "                else:\n",
+    "                    formatted_output = textwrap.fill(text, width=width)\n",
     "\n",
-    "            \n",
-    "my_widgets['investigate_button'].on_click(investigate_on_click)"
+    "                COLOR_TITLE = '#1A0DAB'\n",
+    "                COLOR_METADATA = '#006621'\n",
+    "                article_metadata = f\"\"\"\n",
+    "                <a href=\"{ref}\" style=\"color:{COLOR_TITLE}; font-size:17px\"> \n",
+    "                    {article_title}\n",
+    "                </a>\n",
+    "                <br>\n",
+    "                <p style=\"color:{COLOR_METADATA}; font-size:13px\"> \n",
+    "                    {article_auth} &#183; {section_name.lower().title()}\n",
+    "                </p>\n",
+    "                \"\"\"\n",
+    "\n",
+    "                display(HTML(article_metadata))\n",
+    "                display(HTML(formatted_output))\n",
+    "                print()\n",
+    "\n",
+    "                self.report += article_metadata +  formatted_output + \"<br>\"\n",
+    "\n",
+    "html_report = HtmlReport()\n",
+    "                \n",
+    "my_widgets['investigate_button'].on_click(html_report.investigate_on_click)"
    ]
   },
   {
@@ -817,18 +814,22 @@
     "def report_on_click(b):        \n",
     "    print(\"Saving results to a pdf file.\")\n",
     "    \n",
-    "    hyperparameters_section =  f\"\"\" <h1> Search Parameters </h1>\n",
-    "                                <ul>\n",
-    "                                    <li> Model: {my_widgets['sent_embedder'].value} </li>\n",
-    "                                    <li> Merge synonyms enabled: {my_widgets['sent_embedder'].value} </li>\n",
-    "                                    <li> Query: {my_widgets['merge_synonyms'].value} </li>\n",
-    "                                    <li> Deprioritised text: {my_widgets['deprioritize_text'].value} </li>\n",
-    "                                    <li> Deprioritised strength: {my_widgets['deprioritize_strength'].value} </li>\n",
-    "                                    <li> Excluded text: {my_widgets['exclusion_text'].value} </li> \n",
-    "                                 </ul>\n",
-    "                                 \"\"\"\n",
+    "    COLOR_HYPERPARAMETERS = '#222222'\n",
+    "\n",
     "    \n",
-    "    results_section = f\"<h1> Results </h1> {html_report[0]}\"\n",
+    "    \n",
+    "    \n",
+    "    hyperparameters_section =  f'<h1> Search Parameters </h1>' + \\\n",
+    "                               f'<ul style=\"font-size:13; color:{COLOR_HYPERPARAMETERS}\">' + \\\n",
+    "                               '<li>' + '</li> <li>'.join(['<b>' + \n",
+    "                                                           ' '.join(k.split('_')).title()  + \n",
+    "                                                           '</b>' + \n",
+    "                                                           f': {repr(v.value)}'\n",
+    "                                                          for k, v in my_widgets.items() \n",
+    "                                                          if hasattr(v, 'value')]) + '</li>' + \\\n",
+    "                               f'</ul>'\n",
+    "    \n",
+    "    results_section = f\"<h1> Results </h1> {html_report.report}\"\n",
     "    pdfkit.from_string(hyperparameters_section + results_section, f\"report_{datetime.datetime.now()}.pdf\")\n",
     "\n",
     "my_widgets['report_button'].on_click(report_on_click)"
@@ -841,6 +842,24 @@
    "outputs": [],
    "source": [
     "display(widgets.VBox(list(my_widgets.values())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "COLOR_HYPERPARAMETERS = '#5F6368'\n",
+    "\n",
+    "hyperparameters_section =  f'<h1> Search Parameters </h1>' + \\\n",
+    "                           f'<ul style=\"font-size:13; color:{COLOR_HYPERPARAMETERS}\">' + \\\n",
+    "                           '<li>' + '</li> <li>'.join([' '.join(k.split('_')).title() + f': {repr(v.value)}' \n",
+    "                                                      for k, v in my_widgets.items() \n",
+    "                                                      if hasattr(v, 'value')]) + '</li>' + \\\n",
+    "                           f'</ul>'\n",
+    "\n",
+    "display(HTML(hyperparameters_section))"
    ]
   },
   {
