Fix [BBS-12]: save the sent embeddings in separate files
Sentences embeddings are now saved in differents files:
{Name_of_the_model}_sentence_embeddings.npz files
+ Change the absolute path to the dataset to /raid/covid_data/

--- a/notebooks/cord19q_extra/Generate Sentence Embeddings - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Generate Sentence Embeddings - PAFE.ipynb
@@ -29,6 +29,7 @@
     "import tensorflow_hub as hub\n",
     "\n",
     "import torch\n",
+    "import torch.nn\n",
     "\n",
     "import sent2vec\n",
     "from nltk import word_tokenize\n",
@@ -48,12 +49,12 @@
    },
    "outputs": [],
    "source": [
-    "data_path = Path(\"../data/2020-04-08\")\n",
+    "data_path = Path(\"/raid/covid_data/data/2020-04-08\")\n",
     "\n",
     "cord_path = data_path / \"CORD-19-research-challenge\"\n",
     "databases_path = data_path / \"databases\"\n",
     "embeddings_path = data_path / \"embeddings\"\n",
-    "assets_path = Path(\"../assets\")\n",
+    "assets_path = Path(\"/raid/covid_data/assets\")\n",
     "\n",
     "assert data_path.exists()\n",
     "assert cord_path.exists()\n",
@@ -329,161 +330,6 @@
     "    vocab = [line.strip() for line in f]\n",
     "    \n",
     "all(v1 == v2 for v1, v2 in zip(vocab, tokenizer.vocab.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:04:06.458524Z",
-     "start_time": "2020-04-14T14:04:06.455709Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# sentences_preprocessed = sent_preprocessing(sentences)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:05:28.032982Z",
-     "start_time": "2020-04-14T14:05:28.005325Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "sbert_embeddings = sbert_embedder.encode(sentences)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:16:32.359314Z",
-     "start_time": "2020-04-14T14:16:32.354996Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "sbert_embeddings[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:05:30.431479Z",
-     "start_time": "2020-04-14T14:05:30.426494Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "len(sbert_embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:05:34.337554Z",
-     "start_time": "2020-04-14T14:05:34.332857Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "sbert_embeddings[0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:15:57.240153Z",
-     "start_time": "2020-04-14T14:15:57.234877Z"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:19:00.002592Z",
-     "start_time": "2020-04-14T14:18:59.996749Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "tokens_tensor, segments_tensors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T14:36:19.835630Z",
-     "start_time": "2020-04-14T14:36:19.732248Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "tokens_tensor, segments_tensors = biobert_preprocess_sentence(sentences[0])\n",
-    "encoded_layers, _ = biobert_model(tokens_tensor, segments_tensors)\n",
-    "encoded_layers = torch.stack(encoded_layers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T15:00:52.182119Z",
-     "start_time": "2020-04-14T15:00:52.177688Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "encoded_layers.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T15:01:15.835948Z",
-     "start_time": "2020-04-14T15:01:15.830713Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "encoded_layers[-1].squeeze().mean(axis=0).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T15:34:47.530130Z",
-     "start_time": "2020-04-14T15:34:47.527677Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn"
    ]
   },
   {
@@ -787,19 +633,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T15:41:57.127838Z",
-     "start_time": "2020-04-14T15:41:57.116129Z"
-    },
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def create_sentence_embeddings(preprocessing=False):\n",
-    "\n",
-    "    embedding_names = ['USE', 'SBERT', 'SBIOBERT', 'BSV']\n",
-    "    embedding_models = [univsentenc_embedder, sbert_embedder, bio_embedder, bsv_embedder]\n",
+    "def create_sentence_embeddings(embedding_name,\n",
+    "                              embedding_model,\n",
+    "                              preprocessing=False):\n",
     "\n",
     "    batch_size = 1_000\n",
     "\n",
@@ -822,63 +661,58 @@
     "        if preprocessing:\n",
     "            sentences = sent_preprocessing(sentences, synonyms_index)\n",
     "\n",
-    "        for embedding_name, embedding_model in zip(embedding_names,\n",
-    "                                                       embedding_models):\n",
-    "            x_ = embed_sentences(sentences, \n",
-    "                                 embedding_name=embedding_name, \n",
-    "                                 embedding_model=embedding_model)\n",
-    "            x[embedding_name].append(x_)\n",
+    "        x_ = embed_sentences(sentences, \n",
+    "                             embedding_name=embedding_name, \n",
+    "                             embedding_model=embedding_model)\n",
+    "        x[embedding_name].append(x_)\n",
     "\n",
     "        print(f'Done processing {batch_size * i} in {time()-t0:.1f} s.')\n",
     "\n",
     "\n",
     "    print('Concatenate...')\n",
     "\n",
-    "    for embedding_name in embedding_names:\n",
-    "        print(f'processing: {embedding_name}')\n",
-    "        # Concatenate\n",
-    "        xx = np.concatenate(x[embedding_name], axis=0)\n",
-    "        all_ids = np.array(all_ids).reshape((-1, 1))\n",
-    "        arr[embedding_name] = np.concatenate((all_ids, xx), axis=1)\n",
+    "    print(f'processing: {embedding_name}')\n",
+    "    # Concatenate\n",
+    "    xx = np.concatenate(x[embedding_name], axis=0)\n",
+    "    all_ids = np.array(all_ids).reshape((-1, 1))\n",
+    "    arr[embedding_name] = np.concatenate((all_ids, xx), axis=1)\n",
     "    \n",
     "    print('Save...')\n",
     "\n",
     "    if preprocessing:\n",
-    "        file_name = \"sentence_embeddings_merged_synonyms.npz\"\n",
+    "        file_name = f\"{embedding_name}_sentence_embeddings_merged_synonyms.npz\"\n",
     "    else:\n",
-    "        file_name = \"sentence_embeddings.npz\"\n",
+    "        file_name = f\"{embedding_name}_sentence_embeddings.npz\"\n",
     "    \n",
-    "    np.savez_compressed(file=str(embeddings_path / file_name), **arr)"
+    "    np.savez_compressed(file=str(file_name), **arr)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T16:09:03.917079Z",
-     "start_time": "2020-04-14T15:42:02.774592Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "create_sentence_embeddings(preprocessing=False)"
+    "embedding_names = ['USE', 'SBERT', 'BSV', 'SBIOBERT']\n",
+    "embedding_models = [univsentenc_embedder, sbert_embedder, bsv_embedder, bio_embedder]\n",
+    "for embedding_name, embedding_model in zip(embedding_names, embedding_models):\n",
+    "    create_sentence_embeddings(embedding_name=embedding_name,\n",
+    "                               embedding_model=embedding_model,\n",
+    "                               preprocessing=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-14T16:09:08.106731Z",
-     "start_time": "2020-04-14T16:09:03.919116Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
-    "create_sentence_embeddings(preprocessing=True)"
+    "for embedding_name, embedding_model in zip(embedding_names, embedding_models):\n",
+    "    create_sentence_embeddings(embedding_name=embedding_name,\n",
+    "                               embedding_model=embedding_model,\n",
+    "                               preprocessing=False)"
    ]
   },
   {
@@ -905,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
