--- a/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
+++ b/notebooks/cord19q_extra/Information Retrieval - PAFE.ipynb
@@ -116,11 +116,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = Path(\"/raid/sschmidt/covid_data/data/2020-04-08\")\n",
+    "data_path = Path(\"/raid/covid_data/data/2020-04-08\")\n",
     "cord_path = data_path / \"CORD-19-research-challenge\"\n",
     "databases_path = data_path / \"databases\"\n",
     "embeddings_path = data_path / \"embeddings\"\n",
-    "assets_path = Path(\"/raid/sschmidt/covid_data/assets\")\n",
+    "assets_path = Path(\"/raid/covid_data/assets\")\n",
     "\n",
     "assert data_path.exists()\n",
     "assert cord_path.exists()\n",
@@ -441,7 +441,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embeddings = np.load(embeddings_path / 'sentence_embeddings.npz')"
+    "embeddings = dict()\n",
+    "for embeddings_name in EMBEDDINGS_NAMES:\n",
+    "    embeddings[embeddings_name] = np.load(embeddings_path / f'{embeddings_name}_sentence_embeddings.npz')[embeddings_name]"
    ]
   },
   {
@@ -950,7 +952,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
